# mr_pinchy_bringup

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: gnss.yaml  pinchy.yaml  sonar.yaml
launch/: bringup.launch.py  gnss.launch.py  mavros.launch.py  sensors_bridge.launch.py  sonar.launch.py  vehicle_config.py
scripts/: depth_bridge.py  ntrip_client_py.py  nucleus_ahrs_bridge.py  nucleus_dvl_bridge.py  nucleus_imu_bridge.py  test_ntrip.py
