<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mr_pinchy_bringup</name>
  <version>0.1.0</version>
  <description>Vehicle bringup launch files and configuration for Mr Pinchy</description>
  <maintainer email="jvaldez@kth.se">Julian Valdez</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ublox_dgnss</exec_depend>
  <exec_depend>ublox_dgnss_node</exec_depend>
  <exec_depend>ublox_nav_sat_fix_hp_node</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
