<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mr_pinchy_bringup</name>
  <version>0.1.0</version>
  <description>Vehicle bringup launch files and configuration for Mr Pinchy</description>
  <maintainer email="jvaldez@kth.se">Julian Valdez</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>waterlinked_sonar_3d15</exec_depend>
  <exec_depend>nucleus_driver_ros2</exec_depend>
  <exec_depend>interfaces</exec_depend>
  <exec_depend>smarc_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rtcm_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ublox_dgnss</exec_depend>
  <exec_depend>ublox_dgnss_node</exec_depend>
  <exec_depend>ublox_nav_sat_fix_hp_node</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
